--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <style type="text/css">
  body{background:#F0D5E4;}
 
-.error{ width:768px; height:404px; background:url(https://raw.githubusercontent.com/cinderellastory415/images/master/icon.jpg) no-repeat; position:absolute; top:200px; left:350px;}
+.error{ width:768px; height:404px; background:url(http://cinderellastory415.github.io/images/icon.jpg) no-repeat; position:absolute; top:200px; left:350px;}
 .error .text{border:0px #000 solid; height:40px; margin-top:300px; font-size:16px; font-family:"微软雅黑";font-weight:bolder;}
 .error .text a{color:#d22e73;}
 .error .text .p1{float:left; margin-left:280px; margin-top:7px;}
@@ -31,9 +31,9 @@
 <div class="errorUp"></div>
 <div class="error">
   <div class="text">
-      <p class="p1"><a href="javascript:history.go(-1)">返回上一页</a></p>
+      <p class="p1"><a href="#">返回上一页</a></p>
       <p class="p2">or</p>
-      <p class="p3"><a href="/">返回首页</a></p>
+      <p class="p3"><a href="#">返回首页</a></p>
   </div>
 </div>
 </body>
