--- a/500.html
+++ b/500.html
@@ -9,7 +9,7 @@
 <style type="text/css">
  body{background:#F0D5E4;}
 
-.error{ width:768px; height:404px; background:url(https://raw.githubusercontent.com/cinderellastory415/images/master/icon3.jpg) no-repeat; position:absolute; top:200px; left:350px;}
+.error{ width:768px; height:404px; background:url(http://cinderellastory415.github.io/images/icon3.jpg) no-repeat; position:absolute; top:200px; left:350px;}
 .error .text{border:0px #000 solid; height:40px; margin-top:300px; font-size:16px; font-family:"微软雅黑";font-weight:bolder;position:absolute;left:350px;}
 </style>
 <script type="text/ecmascript">
@@ -27,7 +27,7 @@
 <body>
 <div class="errorUp"></div>
 <div class="error">
-  <div class="text"><a href="/"><img src="https://raw.githubusercontent.com/cinderellastory415/images/master/btn.jpg" alt=""></a></div>
+  <div class="text"><a href="/"><img src="http://cinderellastory415.github.io/images/btn.jpg" alt=""></a></div>
 </div>
 </body>
 </html>
